tests/apple-app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
      - name: apple-app
        image: docker.io/pflaeging/http-echo-env:latest
        env:
	- name: TEXT
	  value: apple
---
kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - port: 5000 # Default port for image
