tests/banana-app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: banana-app
  labels:
    app: banana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banana
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
      - name: banana-app
        image: docker.io/pflaeging/http-echo-env:latest
        env:
	- name: TEXT
	  value: "banana"
---
kind: Service
apiVersion: v1
metadata:
  name: banana-service
spec:
  selector:
    app: banana
  ports:
    - port: 5000 # Default port for image
