tests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-multi-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /apple
          backend:
            serviceName: apple-service
            servicePort: 5000
        - path: /banana
          backend:
            serviceName: banana-service
            servicePort: 5000
        - path: /files
          backend:
            serviceName: files-service
            servicePort: 80
